--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex" />
-  <title>Content Manager</title>
+  <title>Content Manager (Decap Test)</title>
 </head>
 <body>
   <script src="https://unpkg.com/decap-cms@3.1.1/dist/decap-cms.js"></script>
