--- a/admin/index.html
+++ b/admin/index.html
@@ -4,9 +4,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex" />
-  <title>Content Manager (Decap Test)</title>
+  <title>Content Manager (Sveltia CMS)</title>
+  <!-- Sveltia CMS Script -->
+  <script src="https://unpkg.com/sveltia-cms@latest/dist/sveltia-cms.js"></script>
 </head>
 <body>
-  <script src="https://unpkg.com/decap-cms@3.0.0/dist/decap-cms.js"></script>
+  <!-- Initialize Sveltia CMS -->
+  <script>
+    // Możesz tu dodać niestandardową konfigurację lub rozszerzenia, jeśli będą potrzebne w przyszłości.
+    // Na razie sam skrypt powyżej powinien wystarczyć do załadowania CMS.
+  </script>
 </body>
 </html>
