--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
- <!DOCTYPE html><html><head><title>Test Page</title></head><body><h1>Test Page</h1></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Sveltia CMS Test</title>
+</head>
+<body>
+  <h1>Sveltia CMS Test Page</h1>
+  <p><a href="admin/">Login to CMS</a></p>
+</body>
+</html>
